Upload SQlite records to SQL Server,

--- a/DAL/App.config
+++ b/DAL/App.config
@@ -1,3 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+	<connectionStrings>
+		<add name="PitchforkDB" connectionString="Data Source=.\Pitchfork.db;Version=3;" providerName="System.Data.SqlClient"/>
+		<add name="RecordDB" connectionString="Data Source=TIGER;Initial Catalog=RecordDB;uid=sa;pwd=MallaiG%47$" providerName="System.Data.SqlClient"/>
+	</connectionStrings>
 </configuration>
